# crypto_price_notifier

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
src/: cli.py  settings.toml
src/notifier/: alert_logic.py  base.py  config.py  fetcher.py  runner.py  storage.py
tests/: test_alert_logic.py  test_fetcher.py  test_notify.py  test_sounds.py
