[project]
name = "crypto-notifier"
version = "0.1.0"
description = "initiate the  project"
authors = [
    {name = "A.Ali",email = "ali.a@aucegypt.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "plyer (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
